Location sharing using OpenStreetMap via osmdroid
Use playProdOsmDebug variant for example to build it.

This implementation does not intend to remove all uses of Google APIs
from Signal. It is intended to add a drop-in replacement to the features
of Google Maps library that Signal uses, that replaces the "backend" of
all classes and methods to OpenStreetMap via osmdroid library. It does
not edit any call site code (except app/build.gradle to add a dimension
and flavors).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -181,6 +181,7 @@ android {
         buildConfigField "int", "SIGNAL_CANONICAL_VERSION_CODE", "$canonicalVersionCode"
         buildConfigField "String", "BACKUP_FILENAME", "\"" + BASE_APP_FILENAME.toLowerCase() + "\""
         buildConfigField "boolean", "FORCE_INTERNAL_USER_FLAG", "$FORCE_INTERNAL_USER_FLAG"
+        buildConfigField "boolean", "USE_OSM", "false"
 
         vectorDrawables.useSupportLibrary = true
 
@@ -309,6 +310,7 @@ android {
             versionNameSuffix '-FOSS'
             buildConfigField "boolean", "USE_PLAY_SERVICES", "false"
             buildConfigField "String", "FDROID_UPDATE_URL", "\"https://molly.im/fdroid/foss/repo\""
+            buildConfigField "boolean", "USE_OSM", "true"
         }
 
         prod {
@@ -430,6 +432,8 @@ dependencies {
 
     gmsImplementation libs.google.play.services.maps
     gmsImplementation libs.google.play.services.auth
+
+    fossImplementation 'org.osmdroid:osmdroid-android:6.1.8'
 
     implementation libs.bundles.exoplayer
 
