Add custom test runner to fix instrumented tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -252,7 +252,7 @@ android {
 
         resConfigs autoResConfig()
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'org.thoughtcrime.securesms.AppTestRunner'
         testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
