Add biometric screen lock

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -410,8 +410,9 @@ dependencies {
     implementation libs.androidx.camera.view
     implementation libs.androidx.concurrent.futures
     implementation libs.androidx.autofill
-    implementation libs.androidx.webkit
+    implementation libs.androidx.biometric
     implementation libs.androidx.sharetarget
+    implementation libs.androidx.webkit
 
     nonFreeImplementation (libs.firebase.messaging) {
         exclude group: 'com.google.firebase', module: 'firebase-core'
