--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -44,7 +44,7 @@ dependencyResolutionManagement {
             alias('androidx-camera-view').to('androidx.camera:camera-view:1.0.0-alpha18')
             alias('androidx-concurrent-futures').to('androidx.concurrent:concurrent-futures:1.0.0')
             alias('androidx-autofill').to('androidx.autofill:autofill:1.0.0')
-            alias('androidx-biometric').to('androidx.biometric:biometric:1.1.0')
+            alias('androidx-biometric').to('androidx.biometric:biometric:1.2.0-alpha04')
             alias('androidx-sharetarget').to('androidx.sharetarget:sharetarget:1.1.0')
             alias('androidx-sqlite').to('androidx.sqlite:sqlite:2.1.0')
             alias('androidx-webkit').to('androidx.webkit:webkit:1.4.0')
