Also increase swap space in reprocheck workflow

--- a/.github/workflows/reprocheck.yml
+++ b/.github/workflows/reprocheck.yml
@@ -23,6 +23,14 @@ jobs:
         with:
           ref: "${{ env.TAG_NAME }}"
 
+      - name: Increase swap space
+        run: |
+          sudo fallocate -l 8G /swapB
+          sudo chmod 600 /swapB
+          sudo mkswap /swapB
+          sudo swapon /swapB
+          swapon --show
+
       - name: Build Docker image
         run: docker-compose build
         working-directory: reproducible-builds
