--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: set up JDK 11
+      uses: actions/setup-java@v3
       with:
+        distribution: temurin
         java-version: 11
 
     - name: Validate Gradle Wrapper
@@ -42,7 +43,7 @@ jobs:
 
     - name: Archive reports for failed build
       if: "failure()"
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: test-reports
         path: "reproducible-builds/test-reports"
