Do not wrap Maps API key in quotation marks

--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -3,4 +3,4 @@ baseAppTitle=Molly
 baseApkFileName=Molly
 basePackageId=im.molly.app
 # Google Maps API key
-mapsApiKey='AIzaSyASGeona9KPt6Vbz1VmI6POXIXTuoDftB4'
+mapsApiKey=AIzaSyASGeona9KPt6Vbz1VmI6POXIXTuoDftB4
