--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,41 +9,48 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
 
 jobs:
-  test:
-    name: Test
+  wrapper_validation:
+    name: Validate Gradle Wrapper
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 11
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
 
-    - name: Validate Gradle Wrapper
-      uses: gradle/wrapper-validation-action@master
+      - name: Run wrapper validation
+        uses: gradle/wrapper-validation-action@master
 
-    - name: Increase swap space
-      run: |
-        sudo fallocate -l 8G /swapB
-        sudo chmod 600 /swapB
-        sudo mkswap /swapB
-        sudo swapon /swapB
-        swapon --show
+  test:
+    name: Assemble and run tests
+    runs-on: ubuntu-latest
 
-    - name: Build Docker image
-      run: docker-compose build
-      working-directory: reproducible-builds
+    steps:
+      - uses: actions/checkout@v3
 
-    - name: Run tests
-      run: docker-compose run test
-      working-directory: reproducible-builds
+      - name: Increase swap space
+        run: |
+          sudo fallocate -l 8G /swapB
+          sudo chmod 600 /swapB
+          sudo mkswap /swapB
+          sudo swapon /swapB
+          swapon --show
 
-    - name: Archive reports for failed build
-      if: "failure()"
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-reports
-        path: "reproducible-builds/test-reports"
+      - name: Set up builder image
+        run: docker-compose build
+        working-directory: reproducible-builds
+
+      - name: Run tests
+        run: docker-compose run test
+        working-directory: reproducible-builds
+
+      - name: Archive reports for failed tests
+        if: "failure()"
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-reports
+          path: "reproducible-builds/test-reports"
