--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -2,5 +2,7 @@
 baseAppTitle=Molly
 baseApkFileName=Molly
 basePackageId=im.molly.app
+# Coma-separated list of flavors to build
+buildVariants=prod,staging
 # Google Maps API key
 mapsApiKey=AIzaSyASGeona9KPt6Vbz1VmI6POXIXTuoDftB4
