--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -4,5 +4,7 @@ baseApkFileName=Molly
 basePackageId=im.molly.app
 # Coma-separated list of flavors to build
 buildVariants=prod,staging
+# Enable internal testing extensions
+forceInternalUserFlag=false
 # Google Maps API key
 mapsApiKey=AIzaSyASGeona9KPt6Vbz1VmI6POXIXTuoDftB4
