--- a/reproducible-builds/docker-compose.yml
+++ b/reproducible-builds/docker-compose.yml
@@ -5,38 +5,26 @@ services:
     build:
       context: ..
       dockerfile: reproducible-builds/Dockerfile
-    command: ./gradlew -Pci :app:assembleProdNonFreeRelease :app:assembleProdFreeRelease
+    command: :app:assembleRelease
     volumes:
       - ./certs:/molly/app/certs:ro
       - ./apks:/molly/app/build/outputs/apk
     environment:
+      - CI_APP_TITLE
+      - CI_APP_FILENAME
+      - CI_PACKAGE_ID
+      - CI_BUILD_VARIANTS
+      - CI_FORCE_INTERNAL_USER_FLAG
+      - CI_MAPS_API_KEY
       - CI_KEYSTORE_PATH
       - CI_KEYSTORE_PASSWORD
       - CI_KEYSTORE_ALIAS
-  assemble-alpha:
-    image: reproducible-molly
-    build:
-      context: ..
-      dockerfile: reproducible-builds/Dockerfile
-    command: ./gradlew -Pci :app:assembleRelease
-    volumes:
-      - ./certs:/molly/app/certs:ro
-      - ./apks:/molly/app/build/outputs/apk
-    environment:
-      - CI_KEYSTORE_PATH
-      - CI_KEYSTORE_PASSWORD
-      - CI_KEYSTORE_ALIAS
-      - ORG_GRADLE_PROJECT_baseAppTitle=Molly Insider
-      - ORG_GRADLE_PROJECT_baseApkFileName=Molly-Insider
-      - ORG_GRADLE_PROJECT_basePackageId=im.molly.insider
-    profiles:
-      - alpha
   test:
     image: reproducible-molly
     build:
       context: ..
       dockerfile: reproducible-builds/Dockerfile
-    command: ./gradlew build
+    command: build
     volumes:
       - ./test-reports:/molly/app/build/reports
     environment:
