--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     name: Build
     if: "github.event.base_ref == 'refs/heads/main'"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       CI_MAPS_API_KEY: ${{ secrets.MAPS_API_KEY }}
 
@@ -70,7 +70,7 @@ jobs:
   publish:
     name: Publish
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v3
