--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -2,8 +2,8 @@
 baseAppTitle=Molly
 baseAppFileName=Molly
 basePackageId=im.molly.app
-# Coma-separated list of flavors to build
-buildVariants=prod,staging
+# Pattern to partial match the flavors to build
+buildVariants=
 # Enable internal testing extensions
 forceInternalUserFlag=false
 # Google Maps API key
