--- a/reproducible-builds/ci/prerelease.env
+++ b/reproducible-builds/ci/prerelease.env
@@ -1,4 +1,4 @@
-CI_BUILD_VARIANTS=prod,staging
+CI_BUILD_VARIANTS=(prod|staging)(Gms|Foss)Website
 CI_APP_TITLE=Molly Insider
 CI_APP_FILENAME=Molly-Insider
 CI_PACKAGE_ID=im.molly.insider
