--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -38,12 +38,12 @@ jobs:
         env:
           TEST_KEYSTORE: ${{ secrets.TEST_KEYSTORE }}
 
-      - name: Build APKs
+      - name: Build pre-release
         if: "env.HAVE_TEST_KEYSTORE == 'false'"
         run: docker-compose --env-file ci/prerelease.env run assemble
         working-directory: reproducible-builds
 
-      - name: Build and sign APKs
+      - name: Build and sign pre-release
         if: "env.HAVE_TEST_KEYSTORE == 'true'"
         run: docker-compose --env-file ci/prerelease.env run assemble
         working-directory: reproducible-builds
@@ -58,13 +58,21 @@ jobs:
         working-directory: reproducible-builds
 
       - name: Log checksums
-        run: find reproducible-builds/apks -name "*.apk" -exec sha256sum '{}' +
+        run: find outputs \( -name "*.aab" -o -name "*.apk" \) -exec sha256sum '{}' +
+        working-directory: reproducible-builds
 
       - name: Upload APKs
         uses: actions/upload-artifact@v3
         with:
-          name: build
-          path: reproducible-builds/apks/*/release/*.apk
+          name: apk
+          path: reproducible-builds/outputs/apk/*/release/*.apk
+          if-no-files-found: error
+
+      - name: Upload Bundles
+        uses: actions/upload-artifact@v3
+        with:
+          name: bundle
+          path: reproducible-builds/outputs/bundle/*Release/*.aab
           if-no-files-found: error
 
   publish:
@@ -81,6 +89,6 @@ jobs:
         uses: actions/download-artifact@v3
 
       - name: Create pre-release draft
-        run: gh release create -d -p -t "$GITHUB_REF_NAME Insider" "$GITHUB_REF_NAME" ./build/*/release/*.apk
+        run: gh release create -d -p -t "$GITHUB_REF_NAME" "$GITHUB_REF_NAME" ./apk/*/release/*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISH_PAT || secrets.GITHUB_TOKEN }}
