Revert "Disable auto backups for now"
This reverts commit d2890bce8dd4637d2362b6b79b71916e4e9f5508.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,8 +88,7 @@
                  android:supportsRtl="true"
                  android:resizeableActivity="true"
                  android:fullBackupOnly="false"
-                 android:allowBackup="false"
-                 tools:replace="android:allowBackup"
+                 android:allowBackup="true"
                  android:backupAgent=".absbackup.SignalBackupAgent"
                  android:theme="@style/TextSecure.LightTheme"
                  android:largeHeap="true">
