--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run wrapper validation
-        uses: gradle/wrapper-validation-action@master
+        uses: gradle/wrapper-validation-action@v1
 
   test:
     name: Run tests
