--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,9 @@ on:
       - '.github/FUNDING.yml'
       - '.github/ISSUE_TEMPLATE/**'
 
+permissions:
+  contents: read # to fetch code (actions/checkout)
+
 jobs:
   wrapper_validation:
     name: Validate Gradle wrapper
@@ -36,17 +39,19 @@ jobs:
           sudo swapon /swapB
           swapon --show
 
-      - name: Set up builder image
-        run: docker-compose build
-        working-directory: reproducible-builds
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
+          cache: gradle
 
       - name: Run tests
-        run: docker-compose run test
-        working-directory: reproducible-builds
+        run: ./gradlew build --no-daemon
 
       - name: Archive reports for failed tests
         if: "failure()"
         uses: actions/upload-artifact@v3
         with:
           name: test-reports
-          path: "reproducible-builds/test-reports"
+          path: '*/build/reports'
