--- a/reproducible-builds/docker-compose.yml
+++ b/reproducible-builds/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: reproducible-molly
     build:
       context: ..
-    command: :app:assembleRelease :app:bundleRelease
+    command: :app:assembleRelease :app:bundleRelease --no-daemon
     volumes:
       - ./certs:/molly/app/certs:ro
       - ./outputs:/molly/app/build/outputs
@@ -18,14 +18,3 @@ services:
       - CI_KEYSTORE_PATH
       - CI_KEYSTORE_PASSWORD
       - CI_KEYSTORE_ALIAS
-  test:
-    image: reproducible-molly
-    build:
-      context: ..
-    command: build
-    volumes:
-      - ./test-reports:/molly/app/build/reports
-    environment:
-      - BUILD_SCAN=1
-    profiles:
-      - test
